fe/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feproject
  namespace: prod
  labels:
    app: feproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feproject
  template:
    metadata:
      labels:
        app: feproject
    spec:
      containers:
        - name: feproject
          image: arthurfonichkin/feproject:prod-8163bac612c4718b607f278225ea3fd461e89915
          ports:
            - containerPort: 80
          env: null
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 1Gi
              cpu: 1
