fe/prod/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: feproject-service
  namespace: prod
spec:
  selector:
    app: feproject
  ports:
    - port: 80
      targetPort: 80
